<resources>
    <string name="app_name" translatable="false">MobileCam</string>
    <string name="action_search">Search</string>
    <string name="action_setting">Setting</string>
    <string name="preview">Preview</string>
    <string name="capture">capture</string>
    <string name="mpb">Multiple Playback</string>
    <string name="spb">Single Playback</string>
    <string name="camera_setting">Setting</string>
    <string name="invalid_device">Please download correct APP</string>
    <string name="title_car_mode">Car Mode</string>
    <string name="setting_slow_mo">Slow-Motion Function</string>
    <string name="setting_on">ON</string>
    <string name="setting_off">OFF</string>
    <string name="setting_timelapse_set">Please turn off Timelapse to set this value</string>
    <string name="setting_car_mode_set">Please turn off Car Mode to set this value</string>
    <string name="setting_burst_set">Please turn off Burst Capture to set this value</string>
    <string name="setting_slow_motion_set">Please turn off Slow Motion to set this value</string>
    <string name="stream_title">Camera Preview</string>
    <string name="stream_set_complete">Set Success</string>
    <string name="stream_set_timer">Set Self Timer</string>
    <string name="stream_set_timer_off">Off</string>
    <string name="stream_set_res_vid">Set Video Resolution</string>
    <string name="stream_set_res_photo">Set Photo Resolution</string>
    <string name="stream_set_error">Set Failed</string>
    <string name="ptp_connected">PTP Connected</string>
    <string name="stream_error_cannot_open_gallery">Disabled while capturing or recording</string>
    <string name="stream_error_capturing">Capturing cannot switch</string>
    <string name="stream_error_not_enough_space">Not enough space!</string>
    <string name="stream_error_recording">Recording cannot switch</string>
    <string name="stream_error_capturing_capture">Processing...</string>
    <string name="stream_capturing">Capturing...</string>
    <string name="stream_capture_failed">Capture failed, please retry</string>
    <string name="stream_wait_for_video">Please wait</string>
    <string name="stream_exit_wait">Please wait</string>
    <string name="stream_exit_recording">Press again to stop recording and exit</string>
    <string name="stream_exiting">Exiting...</string>
    <string name="stream_failed">Video stream lost, please get closer to the device and reconnect.</string>
    <string name="stream_reconnect">Reconnect</string>
    <string name="stream_zoom_wait">Setting...</string>
    <string name="setting">Setting</string>
    <string name="setting_yes">Yes</string>
    <string name="setting_no">No</string>
    <string name="setting_power_supply">Frequency</string>
    <string name="setting_format">Format Camera</string>
    <string name="setting_format_confirm">Format Camera</string>
    <string name="setting_format_desc">Do you want to format SD, all your data will be lost?</string>
    <string name="setting_formating">Formating...</string>
    <string name="setting_formatted">Format completed</string>
    <string name="setting_capture_delay">Capture delay</string>
    <string name="setting_image_size">Image size</string>
    <string name="setting_video_size">Video size</string>
    <string name="title_burst">Continuous Shooting</string>
    <string name="setting_burst_interval">Continuous Shooting Interval</string>
    <string name="setting_cap_timescape_interval">Timelapse Interval</string>
    <string name="setting_cap_timescape_duration">Timelapse Duration</string>
    <string name="setting_vid_timescape_interval">Video Timelapse Interval</string>
    <string name="setting_vid_timescape_duration">Video Timelapse Duration</string>
    <string name="setting_datestamp">Date Stamp</string>
    <string name="setting_about">About</string>
    <string name="setting_app_version">App Version</string>
    <string name="setting_product_name">Product Name</string>
    <string name="setting_firmware_version">FW Version</string>
    <string name="title_awb">White Balance</string>
    <string name="dialog_no_sd">No SD card, please insert one and retry</string>
    <string name="setting_no_sd">No SD card to format</string>
    <string name="dialog_refreshing">Refreshing Wi-Fi...</string>
    <string name="dialog_connect_failed">Connection failed, please retry.</string>
    <string name="dialog_failed">Operation failed!</string>
    <string name="dialog_capturing">Capturing</string>
    <string name="dialog_preview">Preview Loading...</string>
    <string name="dialog_connecting">Connecting...</string>
    <string name="dialog_connecting_to_cam">Connecting with camera...</string>
    <string name="dialog_reconnect">Reconnecting</string>
    <string name="dialog_configuring">Configuring, please wait...</string>
    <string name="dialog_invalid_ap">"Doesn't seem to be connecting to a camera, please select another Wi-Fi!"</string>
    <string name="dialog_deleting">Deleting...</string>
    <string name="dialog_delete_failed_single">Error while deleting</string>
    <string name="dialog_deleting_failed_multi">Error while deleting, $1$ items not deleted,please check whether the files are locked or not</string>
    <string name="dialog_downloading">Downloading $1$/$2$...</string>
    <string name="dialog_downloaded">"$2$ pictures downloaded to $3$"</string>
    <string name="dialog_downloaded_2">"$2$ items downloaded to $3$"</string>
    <string name="dialog_downloaded_skipped">"$2$ pictures downloaded.(Skipped $1$ videos and $4$ downloaded pictures)"</string>
    <string name="dialog_downloaded_skipped_2">"$2$ items downloaded.(Skipped $1$ downloaded items)"</string>
    <string name="dialog_downloaded_single">"Picture has been downloaded to $1$"</string>
    <string name="dialog_downloading_single">Downloading...</string>
    <string name="dialog_cancel_downloading_succeeded">"Succeeded to cancel downloading"</string>
    <string name="dialog_cancel_downloading_failed">"Failed to cancel downloading""</string>
    <string name="dialog_wifi_lost">Cannot connect to Wi-Fi, please retry.</string>
    <string name="dialog_btn_reconnect">Reconnect</string>
    <string name="dialog_btn_continue">Continue</string>
    <string name="dialog_btn_exit">Exit</string>
    <string name="dialog_not_enough_space">Handset does not have enough storage, please delete some files and restart.</string>
    <string name="dialog_recording_card_full">Warning: SD card full, video recording stopped.</string>
    <string name="dialog_sd_card_is_full">Warning: SD card full, cannot record or take pictures.</string>
    <string name="dialog_card_error">SD card error!</string>
    <string name="dialog_card_not_exist">SD card is not inserted, cannot perform capture/recording.</string>
    <string name="dialog_card_inserted">SD card inserted</string>
    <string name="dialog_card_removed">SD card is removed</string>
    <string name="dialog_card_full">SD card is full</string>
    <string name="dialog_card_lose">SD card is lost!</string>
    <string name="dialog_timeout">Connection to camera failed, please ensure Wi-Fi connection is working.</string>
    <string name="ok">OK</string>
    <string name="gallery_view_video_not_supported">Video viewing not supported</string>
    <string name="gallery_download_video_not_supported">Video downloading not supported</string>
    <string name="gallery_no_image">No files to download</string>
    <string name="gallery_selection_count">$1$/$2$ Selected</string>
    <string name="gallery_delete_des">Confirm deleting $1$ files?</string>
    <string name="gallery_download_msg">Confirm download $1$ files?</string>
    <string name="gallery_download_with_vid_msg">"Total Files: $1$,Download Time: $2$ mins and $3$ seconds,Confirm download?"</string>
    <string name="gallery_download_pic_msg">Confirm download $1$ pictures?</string>
    <string name="gallery_download_msg_2">"Confirm download $1$ files?($2$ skipped videos)"</string>
    <string name="gallery_download">Download</string>
    <string name="gallery_delete">Delete</string>
    <string name="gallery_cancel">Cancel</string>
    <string name="gallery_no_file_selected">No file selected</string>
    <string name="gallery_share_wifi">Please select Wi-Fi</string>
    <string name="gallery_share_to">Share to...</string>
    <string name="gallery_cannot_view_video">Video viewing not supported</string>
    <string name="gallery_cannot_download_video">Cannot download video</string>
    <string name="image_delete_des">Confirm delete this picture?</string>
    <string name="image_download_msg">Confirm download?</string>
    <string name="no_pics">No picture to view</string>
    <string name="low_battery">Low battery, please recharge the device.</string>
    <string name="unsupported_mode">The device does not support this mode of operation</string>
    <string name="pb_video">Video playback</string>
    <string name="camera_awake_success">Succeed to awake camera</string>
    <string name="camera_awake_failed">Failed to awake camera</string>
    <string name="dialog_delete_all">All delete</string>
    <string name="dialog_awake_all">All awake</string>
    <string name="camera_awake">Awake camera</string>
    <string name="camera_sleep">Sleep camera</string>
    <string name="camera_sleep_alert">Connect to camera will lose if sleep camera,comfirm to do?</string>
    <string name="wb_auto">AUTO</string>
    <string name="wb_daylight">Daylight</string>
    <string name="wb_cloudy">Cloudy</string>
    <string name="wb_fluorescent">Fluorescent</string>
    <string name="wb_incandescent">Incandescent</string>
    <string name="burst_off">OFF</string>
    <string name="burst_3">3 photos</string>
    <string name="burst_5">5 photos</string>
    <string name="burst_10">10 photos</string>
    <string name="burst_7">7 photos</string>
    <string name="burst_15">15 photos</string>
    <string name="burst_30">30 photos</string>
    <string name="burst_hs">Continuous</string>
    <string name="dateStamp_off">OFF</string>
    <string name="dateStamp_date">Date</string>
    <string name="dateStamp_date_and_time">Date and time</string>
    <string name="frequency_50HZ" translatable="false">50HZ</string>
    <string name="frequency_60HZ" translatable="false">60HZ</string>
    <string name="download_manager">Download Manager</string>
    <string name="download_progress">Has done: $1$    Wait: $2$    Failed: $3$</string>
    <string name="downloading_quit">All task of downloading will be cancelled,are you sure?</string>
    <string name="check_wifi_policy">Please keep to always connecting Wi-Fi</string>
    <string name="setting_preview_cache_duration">Preview cache duration</string>
    <string name="setting_time_lapse_interval">Time lapse interval</string>
    <string name="setting_time_lapse_interval_off">OFF</string>
    <string name="setting_time_lapse_interval_2s">2 Sec</string>
    <string name="setting_time_lapse_interval_5s">5 Sec</string>
    <string name="setting_time_lapse_interval_10s">10 Sec</string>
    <string name="setting_time_lapse_interval_20s">20 Sec</string>
    <string name="setting_time_lapse_interval_30s">30 Sec</string>
    <string name="setting_time_lapse_interval_1M">1 Min</string>
    <string name="setting_time_lapse_interval_5M">5 Min</string>
    <string name="setting_time_lapse_interval_10M">10 Min</string>
    <string name="setting_time_lapse_interval_30M">30 Min</string>
    <string name="setting_time_lapse_interval_1HR">60 Min</string>
    <string name="setting_time_lapse_duration">Time lapse duration</string>
    <string name="text_btpair_skip">SKIP</string>
    <string name="action_input_ip">Input ip</string>
    <string name="text_panorama">全景</string>
    <string name="text_stablization">Stablization</string>
    <string name="title_privacy_policy">Privacy policy and user agreement</string>
    <string name="help">Help</string>
</resources>